added anomalies - multi variant plot notebook

--- a/MULTIVARIANT_ANOMALIES_PLOTTER.ipynb
+++ b/MULTIVARIANT_ANOMALIES_PLOTTER.ipynb
@@ -11,8 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTER POINT ID: 1013\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('ENTER POINT ID: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +131,7 @@
     }
    ],
    "source": [
-    "point_df = create_anomaly_df(1013)\n",
+    "point_df = create_anomaly_df(x)\n",
     "plot_multi_variant_anomalies(point_df)"
    ]
   }
