adding create data with anomalies file

--- a/anomalies.ipynb
+++ b/anomalies.ipynb
@@ -86,92 +86,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[882,\n",
-       " 883,\n",
-       " 888,\n",
-       " 891,\n",
-       " 896,\n",
-       " 903,\n",
-       " 907,\n",
-       " 909,\n",
-       " 911,\n",
-       " 916,\n",
-       " 919,\n",
-       " 925,\n",
-       " 927,\n",
-       " 931,\n",
-       " 955,\n",
-       " 956,\n",
-       " 969,\n",
-       " 976,\n",
-       " 985,\n",
-       " 995,\n",
-       " 997,\n",
-       " 1012,\n",
-       " 1013,\n",
-       " 1023,\n",
-       " 1033,\n",
-       " 1057,\n",
-       " 1080,\n",
-       " 1098,\n",
-       " 1104,\n",
-       " 1191,\n",
-       " 1192,\n",
-       " 1238,\n",
-       " 1263,\n",
-       " 1332,\n",
-       " 1333,\n",
-       " 1338,\n",
-       " 1340,\n",
-       " 1358,\n",
-       " 1372,\n",
-       " 1373,\n",
-       " 1375,\n",
-       " 1461,\n",
-       " 1490,\n",
-       " 1530,\n",
-       " 1542,\n",
-       " 1561,\n",
-       " 1568,\n",
-       " 1584,\n",
-       " 1660,\n",
-       " 1908,\n",
-       " 1991,\n",
-       " 1994,\n",
-       " 2045,\n",
-       " 2292,\n",
-       " 2294,\n",
-       " 2295,\n",
-       " 3029,\n",
-       " 3226,\n",
-       " 3256,\n",
-       " 3436,\n",
-       " 3668,\n",
-       " 4067,\n",
-       " 4210,\n",
-       " 4338,\n",
-       " 4386,\n",
-       " 5056,\n",
-       " 5058]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "active_by_aouthority['24']['nodes']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2125,13 +2039,7 @@
       "1900/1900 [==============================] - 6s 3ms/step - loss: 0.0117 - accuracy: 0.9958 - val_loss: 0.0089 - val_accuracy: 0.9990\n",
       "Epoch 47/100\n",
       "1900/1900 [==============================] - 5s 3ms/step - loss: 0.0116 - accuracy: 0.9955 - val_loss: 0.0090 - val_accuracy: 0.9990\n",
-      "Epoch 48/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 48/100\n",
       "1900/1900 [==============================] - 5s 3ms/step - loss: 0.0116 - accuracy: 0.9960 - val_loss: 0.0093 - val_accuracy: 0.9990\n",
       "Epoch 49/100\n",
       "1900/1900 [==============================] - 5s 3ms/step - loss: 0.0117 - accuracy: 0.9957 - val_loss: 0.0096 - val_accuracy: 0.9990\n",
