--- a/anomalies_for_map.ipynb
+++ b/anomalies_for_map.ipynb
@@ -13,13 +13,14 @@
     "from kando import kando_client\n",
     "import pickle\n",
     "%run utils.ipynb\n",
-    "# import libraries\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import axes3d   "
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -47,15 +48,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mps = load_point_mps(911)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -65,35 +57,6 @@
     "    df = pickle.load(infile)\n",
     "    infile.close()\n",
     "    return(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = load_point_data(911)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['EC', 'PH', 'ORP', 'TEMPERATURE'], dtype='object')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns[:-1]"
    ]
   },
   {
@@ -115,29 +78,6 @@
     "        matrix_profile == matrix_profile.max()).flatten()[0]\n",
     "    df['ALL_DIMS'].iloc[max_index:max_index + WINDOW] = 1\n",
     "    return (df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ron/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  iloc._setitem_with_indexer(indexer, value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = add_matrix_profile_anomalies_labels(df, mps)"
    ]
   },
   {
@@ -183,6 +123,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_df_for_anomaly_map(df, point_id):\n",
+    "    b_file = open(f\"{point_id}_df_for_anomaly_map.pkl\", \"wb\")\n",
+    "    pickle.dump(df, b_file)\n",
+    "    b_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mps = load_point_mps(911)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = load_point_data(911)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ron/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  iloc._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = add_matrix_profile_anomalies_labels(df, mps)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -224,108 +217,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_df_for_anomaly_map(df, point_id):\n",
-    "    b_file = open(f\"{point_id}_df_for_anomaly_map.pkl\", \"wb\")\n",
-    "    pickle.dump(df, b_file)\n",
-    "    b_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_df_for_anomaly_map(df, 911)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
