--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,18 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d   \n",
     "\n",
-    "from keras.layers import Input, Dropout, Dense, LSTM, TimeDistributed, RepeatVector\n",
-    "from keras.models import Model\n",
-    "from keras import regularizers\n",
-    "\n",
-    "import eif as iso"
+    "from tensorflow.keras.layers import Input, Dropout, Dense, LSTM, TimeDistributed, RepeatVector\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras import regularizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import eif as iso"
    ]
   },
   {
@@ -565,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "nbTranslate": {
    "displayLangs": [
