--- a/save_points_matrix_profiles.ipynb
+++ b/save_points_matrix_profiles.ipynb
@@ -1642,13 +1642,6 @@
     "        print(point_id, 'files already exist in working directory')\n",
     "print('Failed to create and save matrix profiles for these points:\\n', failed)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1667,7 +1660,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
   },
   "toc": {
    "base_numbering": 1,
