--- a/Map/create_coordinates_df_csv.ipynb
+++ b/Map/create_coordinates_df_csv.ipynb
@@ -6,51 +6,39 @@
     "collapsed": "true"
    },
    "source": [
-    "<div class=\"alert alert-info\"><b>Import Libraries<b>"
+    "**Import Libraries**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nbpackage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-a17b9a892f76>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mnbpackage\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'run'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'utils.ipynb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'matplotlib'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'inline'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nbpackage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
-    "from kando import kando_client\n",
     "import pandas as pd\n",
     "import datetime\n",
-    "import nbpackage\n",
-    "%run utils.ipynb\n",
-    "%matplotlib inline"
+    "import warnings\n",
+    "from tqdm.notebook import tqdm_notebook\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "%run ../utils.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>Global Variables<b>"
+    "**Global Variables**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "WATER_AUTHORITY_NUM = '24'\n",
-    "WATER_AUTHORITY_name = \n",
     "START = datetime.datetime(2020, 1, 1, 0, 0).timestamp()"
    ]
   },
@@ -58,21 +46,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>Create DF<b>"
+    "**Create DF**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = connect()"
+    "client = connect_from_othe_dir()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +69,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('water_authority.json') as json_file:\n",
+    "with open('../water_authority.json') as json_file:\n",
     "    data = json.load(json_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kando - GET /api/data/fetch?point_id=882&unit_id=&start=1577829600.0&end=&raw_data=\n",
+      "Kando - GET /api/data/fetch?point_id=882&unit_id=&start=1593928800&end=&raw_data=\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_node = data[WATER_AUTHORITY_NUM]['nodes'][0]\n",
+    "temp_point = client.get_all(point_id=temp_node, start=START)\n",
+    "file_name = temp_point['point']['group']['water_authority']['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e056b1968cfa462d9f22b178f46b0931",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=67.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -187,7 +209,7 @@
       "Kando - GET /api/data/fetch?point_id=1098&unit_id=&start=1593918000&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=1104&unit_id=&start=1577829600.0&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=1104&unit_id=&start=1587019800&end=&raw_data=\n",
-      "Kando - GET /api/data/fetch?point_id=1104&unit_id=&start=1593918000&end=&raw_data=\n",
+      "Kando - GET /api/data/fetch?point_id=1104&unit_id=&start=1605046200&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=1191&unit_id=&start=1577829600.0&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=1191&unit_id=&start=1587866400&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=1191&unit_id=&start=1593921720&end=&raw_data=\n",
@@ -314,12 +336,13 @@
       "Kando - GET /api/data/fetch?point_id=5056&unit_id=&start=1578974400&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=5058&unit_id=&start=1577829600.0&end=&raw_data=\n",
       "Kando - GET /api/data/fetch?point_id=5058&unit_id=&start=1588852800&end=&raw_data=\n",
-      "Kando - GET /api/data/fetch?point_id=5058&unit_id=&start=1593918000&end=&raw_data=\n"
+      "Kando - GET /api/data/fetch?point_id=5058&unit_id=&start=1593918000&end=&raw_data=\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for node in data[WATER_AUTHORITY_NUM]['nodes']:\n",
+    "for node in tqdm_notebook(data[WATER_AUTHORITY_NUM]['nodes']):\n",
     "    temp_point = client.get_all(point_id=node, start=START)\n",
     "    my_dict = {}\n",
     "    my_dict['point_id'] = [temp_point['point']['id']]\n",
@@ -333,190 +356,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>point_id</th>\n",
-       "      <th>point_name</th>\n",
-       "      <th>sector_id</th>\n",
-       "      <th>sector_name</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5058</td>\n",
-       "      <td>מאסף תוצרת תחתון</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Industrial Main Collector**</td>\n",
-       "      <td>31.8503</td>\n",
-       "      <td>35.2248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5056</td>\n",
-       "      <td>עקב 2 חדש</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Industrial Main Collector**</td>\n",
-       "      <td>31.8606</td>\n",
-       "      <td>35.2192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4386</td>\n",
-       "      <td>cod בגין</td>\n",
-       "      <td>484</td>\n",
-       "      <td>תחנת COD</td>\n",
-       "      <td>31.7647</td>\n",
-       "      <td>35.1925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4338</td>\n",
-       "      <td>ספיקה עיר סניטרי</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Main Collector*</td>\n",
-       "      <td>31.8069</td>\n",
-       "      <td>35.2106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4210</td>\n",
-       "      <td>תחנת ניטור COD כיכר עטרות</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Main Collector*</td>\n",
-       "      <td>31.8495</td>\n",
-       "      <td>35.227</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>896</td>\n",
-       "      <td>שוחה אחרונה</td>\n",
-       "      <td>406</td>\n",
-       "      <td>Cosmetic Manufacturer*</td>\n",
-       "      <td>31.8555</td>\n",
-       "      <td>35.215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>891</td>\n",
-       "      <td>תעשייתי</td>\n",
-       "      <td>409</td>\n",
-       "      <td>Hospital*</td>\n",
-       "      <td>31.7975</td>\n",
-       "      <td>35.2402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>888</td>\n",
-       "      <td>שוחה אחרונה לפני הזרמת השפכים לביוב העירוני</td>\n",
-       "      <td>419</td>\n",
-       "      <td>shopping malls, restaurants*</td>\n",
-       "      <td>31.7888</td>\n",
-       "      <td>35.2027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>883</td>\n",
-       "      <td>תחנת ניטור COD מאסף שורק</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Industrial Main Collector**</td>\n",
-       "      <td>31.7736</td>\n",
-       "      <td>35.1514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>882</td>\n",
-       "      <td>תחנת ניטור COD מאסף רפאים</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Main Collector*</td>\n",
-       "      <td>31.7737</td>\n",
-       "      <td>35.152</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>67 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   point_id                                   point_name sector_id  \\\n",
-       "0      5058                             מאסף תוצרת תחתון        39   \n",
-       "1      5056                                   עקב 2 חדש         39   \n",
-       "2      4386                                     cod בגין       484   \n",
-       "3      4338                             ספיקה עיר סניטרי        48   \n",
-       "4      4210                    תחנת ניטור COD כיכר עטרות        48   \n",
-       "..      ...                                          ...       ...   \n",
-       "62      896                                  שוחה אחרונה       406   \n",
-       "63      891                                      תעשייתי       409   \n",
-       "64      888  שוחה אחרונה לפני הזרמת השפכים לביוב העירוני       419   \n",
-       "65      883                     תחנת ניטור COD מאסף שורק        39   \n",
-       "66      882                    תחנת ניטור COD מאסף רפאים        48   \n",
-       "\n",
-       "                     sector_name latitude longitude  \n",
-       "0    Industrial Main Collector**  31.8503   35.2248  \n",
-       "1    Industrial Main Collector**  31.8606   35.2192  \n",
-       "2                       תחנת COD  31.7647   35.1925  \n",
-       "3                Main Collector*  31.8069   35.2106  \n",
-       "4                Main Collector*  31.8495    35.227  \n",
-       "..                           ...      ...       ...  \n",
-       "62        Cosmetic Manufacturer*  31.8555    35.215  \n",
-       "63                     Hospital*  31.7975   35.2402  \n",
-       "64  shopping malls, restaurants*  31.7888   35.2027  \n",
-       "65   Industrial Main Collector**  31.7736   35.1514  \n",
-       "66               Main Collector*  31.7737    35.152  \n",
-       "\n",
-       "[67 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df"
+    "**Save to csv file**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('gichon.csv')"
+    "df.to_csv(f'{file_name}.csv')"
    ]
   }
  ],
