--- a/Research/EDA.ipynb
+++ b/Research/EDA.ipynb
@@ -26,40 +26,8 @@
     "import urllib\n",
     "import ssl\n",
     "import io\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting STUMPY\n",
-      "  Downloading stumpy-1.5.0-py3-none-any.whl (61 kB)\n",
-      "\u001b[K     |████████████████████████████████| 61 kB 134 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.13 in /home/ron/anaconda3/lib/python3.6/site-packages (from STUMPY) (1.18.5)\n",
-      "Requirement already satisfied: scipy>=1.2.1 in /home/ron/anaconda3/lib/python3.6/site-packages (from STUMPY) (1.4.1)\n",
-      "Requirement already satisfied: numba>=0.42.0 in /home/ron/anaconda3/lib/python3.6/site-packages (from STUMPY) (0.48.0)\n",
-      "Requirement already satisfied: llvmlite<0.32.0,>=0.31.0dev0 in /home/ron/anaconda3/lib/python3.6/site-packages (from numba>=0.42.0->STUMPY) (0.31.0)\n",
-      "Requirement already satisfied: setuptools in /home/ron/anaconda3/lib/python3.6/site-packages (from numba>=0.42.0->STUMPY) (45.2.0.post20200210)\n",
-      "Installing collected packages: STUMPY\n",
-      "Successfully installed STUMPY-1.5.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install STUMPY"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "! pip install git+https://7ccffead3063519ac2d3c5fc9c46ef4ba7691143@github.com/nadavk72/kando-python-client.git"
+    "import os\n",
+    "from kando import kando_client"
    ]
   },
   {
@@ -93,42 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from kando import kando_client"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "key = '7aa093814417ff79f6c21237af123a899cb2a43c55eeabf1098fac8ecc26a2e7'\n",
-    "secret = 'b99991090b60f6e41eaa0315ecc1a54a80a7a6b06002f356cb65d2d284585ff9'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "with open('key.json') as f:\n",
     "    api_login = json.load(f)\n",
     "\n",
     "url = \"https://kando-staging.herokuapp.com\"\n",
     "client = kando_client.client(url, api_login['key'], api_login['secret'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://kando-staging.herokuapp.com\"\n",
-    "client = kando_client.client(url, key, secret)"
    ]
   },
   {
@@ -9794,7 +9735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "nbTranslate": {
    "displayLangs": [
