--- a/plot_anomalies_3D.ipynb
+++ b/plot_anomalies_3D.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>&emsp;<u>MATRIX PROFILE ANOMALIES </u></b>"
+    "## MATRIX PROFILE ANOMALIES"
    ]
   },
   {
@@ -4743,7 +4743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "nbTranslate": {
    "displayLangs": [
