--- a/Map/create_coordinates_df_csv.ipynb
+++ b/Map/create_coordinates_df_csv.ipynb
@@ -11,6 +11,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings('ignore')\n",
+    "%run ../utils.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -19,10 +29,7 @@
     "import pandas as pd\n",
     "import datetime\n",
     "import warnings\n",
-    "from tqdm.notebook import tqdm_notebook\n",
-    "\n",
-    "warnings.filterwarnings('ignore')\n",
-    "%run ../utils.ipynb"
+    "from tqdm.notebook import tqdm_notebook"
    ]
   },
   {
