--- a/plot_anomalies_3D.ipynb
+++ b/plot_anomalies_3D.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import Libraries**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -29,12 +46,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Global Variables**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WINDOW = 24"
+    "WINDOW = 24\n",
+    "NODE = 883"
    ]
   },
   {
@@ -74,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mps = load_point_mps(883)"
+    "mps = load_point_mps(NODE)"
    ]
   },
   {
@@ -83,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = load_point_data(883)"
+    "df = load_point_data(NODE)"
    ]
   },
   {
@@ -3648,7 +3673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   },
   "nbTranslate": {
    "displayLangs": [
