--- a/Map/create_coordinates_df_csv.ipynb
+++ b/Map/create_coordinates_df_csv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create coordinates df to csv\n",
+    "\n",
+    "This file create CSV file containing motif information of a chosen water authorities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": "true"
    },
