--- a/Research/create_sector_and_authority_jsons.ipynb
+++ b/Research/create_sector_and_authority_jsons.ipynb
@@ -6,7 +6,11 @@
     "collapsed": "true"
    },
    "source": [
-    "## Create water authority and sectors json files"
+    "## Create water authority and sectors json files\n",
+    "\n",
+    "This file use Kando API to create and save 2 files:\n",
+    "* `water_authority.json` - file containing a dictionary of all points ID by water authorities\n",
+    "* `sectors.json` - file containing a dictionary of all points ID by sectors"
    ]
   },
   {
@@ -30,6 +34,42 @@
     "import json\n",
     "import datetime\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_df_from_dict(site_dic):\n",
+    "    df = pd.DataFrame.from_dict(site_dic['samplings'], orient='index')\n",
+    "    df['Date'] = df['DateTime'].copy()\n",
+    "    df['DateTime'] = pd.to_datetime(df['DateTime'], unit='s')\n",
+    "    df = df.set_index('DateTime')\n",
+    "    df = df[['Date', 'EC', 'PH', 'ORP', 'TEMPERATURE']]\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_year(df, year):\n",
+    "    df['Date'] = pd.to_datetime(df['Date'], unit='s')\n",
+    "    df['year'] = df['Date'].apply(lambda x: x.year)\n",
+    "    df = df.drop(['Date'], axis=1)\n",
+    "    df = df[df.year==year]\n",
+    "    return(df)"
    ]
   },
   {
@@ -63,35 +103,6 @@
    "source": [
     "sector_dict = {}\n",
     "water_authority_dict = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_df_from_dict(site_dic):\n",
-    "    df = pd.DataFrame.from_dict(site_dic['samplings'], orient='index')\n",
-    "    df['Date'] = df['DateTime'].copy()\n",
-    "    df['DateTime'] = pd.to_datetime(df['DateTime'], unit='s')\n",
-    "    df = df.set_index('DateTime')\n",
-    "    df = df[['Date', 'EC', 'PH', 'ORP', 'TEMPERATURE']]\n",
-    "    return(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_year(df, year):\n",
-    "    df['Date'] = pd.to_datetime(df['Date'], unit='s')\n",
-    "    df['year'] = df['Date'].apply(lambda x: x.year)\n",
-    "    df = df.drop(['Date'], axis=1)\n",
-    "    df = df[df.year==year]\n",
-    "    return(df)"
    ]
   },
   {
