--- a/plot_anomalies_3D.ipynb
+++ b/plot_anomalies_3D.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Plot Anomalies 3D\n",
+    "\n",
+    "This file finds anomalies in a node, according to 4 different methods: `Isolation Forest`, `Extended Isolation Forest`, `Matrix Profile` and `Auto Encoder`, and plot them on 3D (EC, TEMP, PH)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Import Libraries**"
    ]
   },
@@ -60,6 +69,13 @@
    "source": [
     "WINDOW = 24\n",
     "NODE = 883"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Functions**"
    ]
   },
   {
@@ -942,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>&emsp;<u>ISOLATION FOREST ANOMALIES </u></b>"
+    "**ISOLATION FOREST ANOMALIES**"
    ]
   },
   {
@@ -1759,7 +1775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b>&emsp;<u>AUTOENCODER ANOMALIES </u></b>"
+    "**AUTOENCODER ANOMALIES**"
    ]
   },
   {
@@ -2730,7 +2746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><b><u><center>EXTENDED ISOLATION FOREST ANOMALIES </center></u></b>"
+    "**EXTENDED ISOLATION FOREST ANOMALIES**"
    ]
   },
   {
