updated save points matrix profile, added documentation and cleaned unnecessary code. added checkpoints directory to gitignore

--- a/save_points_matrix_profiles.ipynb
+++ b/save_points_matrix_profiles.ipynb
@@ -54,15 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('key.json') as f:\n",
-    "    api_login = json.load(f)\n",
-    "\n",
-    "url = \"https://kando-staging.herokuapp.com\"\n",
-    "client = kando_client.client(url, api_login['key'], api_login['secret'])"
+    "def create_df_from_dict(site_dic):\n",
+    "    \"\"\"\n",
+    "    :param df: dictionary with raw data from kando's API\n",
+    "    :return: raw data in pandas dataframe with 'EC', 'PH', 'ORP', 'TEMPERATURE' columns,\n",
+    "             date is the index\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    df = pd.DataFrame.from_dict(site_dic['samplings'], orient='index')\n",
+    "    df['Date'] = df['DateTime'].copy()\n",
+    "    df['DateTime'] = pd.to_datetime(df['DateTime'], unit='s')\n",
+    "    df = df.set_index('DateTime')\n",
+    "    df = df[['Date', 'EC', 'PH', 'ORP', 'TEMPERATURE']]\n",
+    "    return(df)"
    ]
   },
   {
@@ -80,6 +88,20 @@
     "                                 orpmax=400,\n",
     "                                 tempmin=5,\n",
     "                                 tempmax=100):\n",
+    "    \"\"\"\n",
+    "    :param df: raw data in pandas dataframe\n",
+    "    :param ecmin: min value for EC, less than that will considered an outlier\n",
+    "    :param ecmax: max value for EC, more than that will considered an outlier\n",
+    "    :param phmin: min value for PH, less than that will considered an outlier\n",
+    "    :param phmax: max value for PH, more than that will considered an outlier\n",
+    "    :param orpmin: min value for ORP, less than that will considered an outlier\n",
+    "    :param orpmax: max value for ORP, more than that will considered an outlier\n",
+    "    :param tempmin: min value for TEMPERATURE, less than that will considered an outlier\n",
+    "    :param tempmax: max value for TEMPERATURE, more than that will considered an outlier\n",
+    "\n",
+    "    :return: data frame with all nulls and outliers imputed with median\n",
+    "    \"\"\"\n",
+    "    \n",
     "    safs = {\n",
     "        'EC': (ecmin, ecmax),\n",
     "        'PH': (phmin, phmax),\n",
@@ -97,26 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_df_from_dict(site_dic):\n",
-    "    df = pd.DataFrame.from_dict(site_dic['samplings'], orient='index')\n",
-    "    df['Date'] = df['DateTime'].copy()\n",
-    "    df['DateTime'] = pd.to_datetime(df['DateTime'], unit='s')\n",
-    "    df = df.set_index('DateTime')\n",
-    "    df = df[['Date', 'EC', 'PH', 'ORP', 'TEMPERATURE']]\n",
-    "    return(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_year(df, year):\n",
+    "     \"\"\"\n",
+    "    :param df: data frame with sensorial data and datetime index\n",
+    "    :param year: requested year\n",
+    "    :return: same data frame filtered to the requested year\n",
+    "    \"\"\"\n",
+    "        \n",
     "    df['Date'] = pd.to_datetime(df['Date'], unit='s')\n",
     "    df['year'] = df['Date'].apply(lambda x: x.year)\n",
     "    df = df.drop(['Date'], axis=1)\n",
@@ -131,6 +144,12 @@
    "outputs": [],
    "source": [
     "def save_df(df, point_id):\n",
+    "     \"\"\"\n",
+    "    :param df: data frame desired to be saved as a file\n",
+    "    :param point_id: id number of the point that the data belongs to\n",
+    "    :return: save the data frame as a pickle file\n",
+    "    \"\"\"\n",
+    "        \n",
     "    b_file = open(f\"{point_id}_data.pkl\", \"wb\")\n",
     "    pickle.dump(df, b_file)\n",
     "    b_file.close()"
@@ -143,9 +162,28 @@
    "outputs": [],
    "source": [
     "def save_matrix_profile_dictionary(mps, point_id):\n",
+    "     \"\"\"\n",
+    "    :param df: data frame desired to be saved as a file\n",
+    "    :param point_id: id number of the point that the data belongs to\n",
+    "    :return: save the natrix profile calculated dictionary as a pickle file\n",
+    "    \"\"\"\n",
+    "        \n",
     "    a_file = open(f\"{point_id}_mps.pkl\", \"wb\")\n",
     "    pickle.dump(mps, a_file)\n",
     "    a_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('key.json') as f:\n",
+    "    api_login = json.load(f)\n",
+    "\n",
+    "url = \"https://kando-staging.herokuapp.com\"\n",
+    "client = kando_client.client(url, api_login['key'], api_login['secret'])"
    ]
   },
   {
@@ -1684,7 +1722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "nbTranslate": {
    "displayLangs": [
